<resources>
    <string name="app_name">NoteShare</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User Name</string>
    <string name="retweets">retweets</string>
    <string name="add_notes_share">Add notes, share.</string>
    <string name="user">User</string>
    <string name="user_email_com">user@useremail.com</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="your_note">Your Note goes here...</string>
    <string name="sign_in_name">Name</string>
    <string name="user_email">Email</string>
    <string name="user_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in_here">Already have an account? Log in here.</string>
    <string name="create_account">Create Account</string>
    <string name="logout">Logout</string>
    <string name="log_in">Log In</string>
    <string name="login_header">Login</string>
    <string name="login">Login</string>
    <string name="text_user">user</string>
    <string name="email_main">user@email.com</string>
</resources>
