<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.albert.noteshare.ui.CreateAccountActivity">

    <EditText
        android:id="@+id/nameEditText"
        android:hint="@string/sign_in_name"
        android:padding="10dp"
        android:layout_width="263dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintVertical_bias="0.243"
        android:textColorHint="@color/colorDivider"
        android:textSize="20sp"
        android:background="@color/colorTextIcons"/>

    <EditText
        android:id="@+id/emailEditText"
        android:hint="@string/user_email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:textColorHint="@color/colorDivider"
        android:textSize="20sp"
        android:background="@android:color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

    <EditText
        android:id="@+id/passwordEditText"
        android:hint="@string/user_password"
        android:textColorHint="@color/colorDivider"
        android:textSize="20sp"
        android:background="@android:color/white"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/confirmPasswordEditText"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/colorDivider"
        android:textSize="20sp"
        android:background="@android:color/white"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/signUpButton"
        android:padding="10dp"
        android:text="@string/sign_up"
        android:background="@color/colorAccent"
        android:textColor="@color/colorTextIcons"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/confirmPasswordEditText" />
    
    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/log_in_here"
        android:textColor="@color/colorTextIcons"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <TextView
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:text="@string/create_account"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintVertical_bias="0.724" />

</android.support.constraint.ConstraintLayout>
