<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.albert.noteshare.ui.LoginActivity">

    <TextView
        android:text="@string/login_header"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textColor="@color/colorTextIcons"
        android:layout_width="263dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/emailEditText"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintVertical_bias="0.828" />

    <EditText
        android:id="@+id/emailEditText"
        android:background="@android:color/white"
        android:hint="@string/user_email"
        android:padding="10dp"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDivider"
        android:textSize="20sp"
        android:nextFocusDown="@+id/passwordEditText"
        android:layout_width="263dp"
        android:layout_height="44dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintVertical_bias="0.27" />

    <EditText
        android:id="@+id/passwordEditText"
        android:background="@android:color/white"
        android:hint="@string/user_password"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDivider"
        android:textSize="20sp"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <Button
        android:id="@+id/loginButton"
        android:background="@color/colorAccent"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/log_in"
        android:textSize="12sp"
        android:textColor="@color/colorTextIcons"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.504" />

    <TextView
        android:id="@+id/registerTextView"
        android:textColor="@color/colorTextIcons"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="Don't have an account? Sign Up here!"
        android:gravity="center_horizontal"
        android:layout_width="263dp"
        android:layout_height="44dp"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
